examples/cert-management/working-config/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: example1
spec:
  type: ClusterIP
  ports:
  - port: 30005
    targetPort: 30005
    protocol: TCP
  selector:
    app: example1
