examples/cert-management/working-config/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: moodle1-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  tls:
  - hosts:
    - www.moodle1.net
    secretName: moodle1-cert
  rules:
  - host: www.moodle1.net
    http:
      paths:
      - path: /
        backend:
          serviceName: example1
          servicePort: 30005
